feat: added navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,30 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-100: #004e98;
+  --primary-200: #0077cc;
+  --accent-100: #eb5e28;
+  --accent-200: #ff7e3d;
+  --text-100: #fffcf2;
+  --text-200: #ccc5b9;
+  --bg-100: #252422;
+  --bg-200: #403d39;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--text-100);
+  background: var(--bg-100);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+section {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
 }
