--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,28 @@ section {
   width: 100%;
   height: 100vh;
 }
+
+.social {
+  position: relative;
+}
+
+.social::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background-color: var(--text-100);
+  border-radius: 50%;
+  transition:
+    width 0.3s ease-in-out,
+    height 0.3s ease-in-out;
+  z-index: -2;
+  transform: translate(-50%, -50%);
+}
+
+.social:hover::before {
+  width: 99%;
+  height: 99%;
+}
